@@ -41,7 +41,7 @@ getValid <- function(molecule) {
     }
 }
 
-getMolecule <- function(formula, elements = NULL, z = 0) {
+getMolecule <- function(formula, elements = NULL, z = 0, maxisotopes=10) {
     # Use full PSE unless stated otherwise
     if (!is.list(elements) || length(elements)==0 ) {
         elements <- initializePSE()
@@ -57,7 +57,8 @@ getMolecule <- function(formula, elements = NULL, z = 0) {
     # masses and isotope pattern
     molecule <- .Call("getMolecule",
                       formula, elements, element_order,
-                      z, PACKAGE="Rdisop")
+                      z, maxisotopes,
+                      PACKAGE="Rdisop")
 
     molecule
 }
@@ -127,13 +128,13 @@ subMolecules <- function(formula1, formula2,
 
 
 decomposeMass <- function(mass, ppm=2.0, mzabs=0.0001,
-                          elements=NULL, filter=NULL, z=0) {
+                          elements=NULL, filter=NULL, z=0, maxisotopes=10) {
     decomposeIsotopes(c(mass), c(1), ppm=ppm, mzabs=mzabs,
-                      elements=elements, filter=filter, z=z)
+                      elements=elements, filter=filter, z=z, maxisotopes=maxisotopes)
 }
 
 decomposeIsotopes <- function(masses, intensities, ppm=2.0, mzabs=0.0001,
-                              elements=NULL, filter=NULL, z=0)
+                              elements=NULL, filter=NULL, z=0, maxisotopes=10)
 {
     # Use limited limited CHNOPS unless stated otherwise
     if (!is.list(elements) || length(elements)==0 ) {
@@ -170,6 +171,7 @@ decomposeIsotopes <- function(masses, intensities, ppm=2.0, mzabs=0.0001,
     # Finally ready to make the call...
     molecules <- .Call("decomposeIsotopes",
                        masses, intensities, ppm, elements, element_order, z,
+                       maxisotopes,
                        PACKAGE="Rdisop")
 
     molecules
