@@ -1,3 +1,6 @@
+2010-02-08  Steffen Neumann	<sneumann@ipb-halle.de>
+	* added parameter maxisotopes to getMolecule() and decompose*()
+
 2008-09-02  ckuhl	<ckuhl@ipb-halle.de>
 	* R/elements.R: added Deuterium
 
